--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body {
 }
 
 .formInputs {
-    margin: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 50px;
 }
 
 #submitButton {
@@ -11,5 +13,19 @@ body {
 }
 
 .employeeDataTable {
-    margin: 10px;
+    margin: 0 auto;
+}
+
+.salaryTotals {
+    margin-top: 80px;
+}
+
+#annualSalaryTotal {
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#monthlySalaryTotal {
+    margin-left: 40px;
+    margin-right: 40px;
 }
